<resources>
    <string name="app_name">ExpndedRecyclerView</string>
    <string name="alien_image">Image of an alien</string>
    <string name="jadhu">Jadhu</string>
    <string name="contact">contact</string>
    <string name="mobile_no">+(91) 1234567890</string>
    <string name="email">Email</string>
    <string name="email_id">hrahajjjks@gmail.com</string>
    <string name="next_button_image">next button image</string>
</resources>